Fixed: wflow-consoleweb - Datalist Builder- Columns selection palette hide the field label when it is too long. @6.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/css/dbuilder.css
+++ b/wflow-consoleweb/src/main/webapp/css/dbuilder.css
@@ -36,12 +36,12 @@
     min-height: 30px;
     color: black;
     width: 120px;
-    height: 30px;
+    height: auto;
 }
 .builder-palette-column .label {
-    /*width: 30%;*/
+    width: 100%;
     display: block;
-    float: left;
+    word-break: break-all;
 }
 
 .builder-palette-column .label.key {
